# philopp-operating-system

./: Cargo.toml  README.md  build.sh
.cargo/: config.toml
src/: main.rs  serial.rs  vga_buffer.rs
